Fix z-index issue on restaurant list in safari.

--- a/public/scss/user-dashboard.scss
+++ b/public/scss/user-dashboard.scss
@@ -339,7 +339,8 @@ main{
     grid-column: 1 / 3;
     grid-row: 1 / -1;
     overflow-y: auto;
-    z-index: 1;
+    z-index: 3;
+    -webkit-transform:translate3d(0,0,0);
     .restaurant-info{
         margin: 5px;
         height: 50px;
